syntax = "proto3";

option go_package = "genproto/education_management_service";

package education_management_service;

service GroupService {
    rpc GetByID(GroupID) returns (GetGroupResponse) {}
    rpc GetByIDTeacher(TeacherID) returns (GetGroupResponse) {}
    rpc GetList(GetListGroupRequest) returns (GetListGroupResponse) {}
    rpc Create(CreateGroupRequest) returns (GroupResponse) {}
    rpc Update(UpdateGroupRequest) returns (GetGroupResponse) {}
    rpc Delete(GroupID) returns (GroupEmpty) {}
}

message Group {
    string id = 1;
    string name = 2;
    string teacherId = 3;
    string supportTeacherId = 4;
    string branchId = 5;
    string type = 6;
    string created_at = 7;
    string updated_at = 8;
    string deleted_at = 9;
}

message GroupEmpty {
    string msg = 1;
}

message GroupID {
    string id = 1;
}

message TeacherID {
    string id = 1;
}

message CreateGroupRequest {
    string name = 1;
    string teacherId = 2;
    string supportTeacherId = 3;
    string branchId = 4;
    string type = 5;
}

message GroupResponse {
    string id = 1;
    string name = 2;
    string teacherId = 3;
    string supportTeacherId = 4;
    string branchId = 5;
    string type = 6;
    string created_at = 7;
    string updated_at = 8;
    string deleted_at = 9;
}

message UpdateGroupRequest {
    string id = 1;
    string name = 2;
    string teacherId = 3;
    string supportTeacherId = 4;
    string branchId = 5;
    string type = 6;
}

message GetGroupResponse {
    string id = 1;
    string name = 2;
    string teacherId = 3;
    string supportTeacherId = 4;
    string branchId = 5;
    string type = 6;
    string created_at = 7;
    string updated_at = 8;
    string deleted_at = 9;
}

message GetListGroupRequest {
    int64 page = 1;
    int64 limit = 2;
    string search = 3;
}

message GetListGroupResponse {
    int64 count = 1;
    repeated GetGroupResponse groups = 2;
}
