syntax = "proto3";

option go_package = "genproto/education_management_service";

package education_management_service;

service ScheduleService {
    rpc GetByID(ScheduleID) returns (GetScheduleResponse) {}
    rpc GetList(GetListScheduleRequest) returns (GetListScheduleResponse) {}
    rpc Create(CreateScheduleRequest) returns (ScheduleResponse) {}
    rpc Update(UpdateScheduleRequest) returns (GetScheduleResponse) {}
    rpc Delete(ScheduleID) returns (ScheduleEmpty) {}
}

message Schedule {
    string id = 1;
    string journalId = 2;
    string date = 3;
    string startTime = 4;
    string endTime = 5;
    string lesson = 6;
    string created_at = 7;
    string updated_at = 8;
    string deleted_at = 9;
}

message ScheduleEmpty {
    string msg = 1;
}

message ScheduleID {
    string id = 1;
}

message CreateScheduleRequest {
    string journalId = 1;
    string date = 2;
    string startTime = 3;
    string endTime = 4;
    string lesson = 5;
}

message ScheduleResponse {
    string id = 1;
    string journalId = 2;
    string date = 3;
    string startTime = 4;
    string endTime = 5;
    string lesson = 6;
    string created_at = 7;
    string updated_at = 8;
    string deleted_at = 9;
}

message UpdateScheduleRequest {
    string id = 1;
    string journalId = 2;
    string date = 3;
    string startTime = 4;
    string endTime = 5;
    string lesson = 6;
}

message GetScheduleResponse {
    string id = 1;
    string journalId = 2;
    string date = 3;
    string startTime = 4;
    string endTime = 5;
    string lesson = 6;
    string created_at = 7;
    string updated_at = 8;
    string deleted_at = 9;
}

message GetListScheduleRequest {
    int64 page = 1;
    int64 limit = 2;
    string search = 3;
}

message GetListScheduleResponse {
    int64 count = 1;
    repeated GetScheduleResponse schedules = 2;
}
